# apiproof

./: .gitignore  README.md  SETUP.md  generate_all_schemas.py  pyproject.toml  requirements.txt  rest_validator.py  soap_validator.py  validate_all.py  validate_rest_all.py  verify_installation.py
contracts/: README.md
reports/: README.md
reports/rest/: ADDRESS_FIELDS-validation-report.html
reports/soap/: ADDRESS_FIELDS-validation-report.html
samples/: README.md
samples/rest/prod-actual/: ADDRESS_FIELDS-actual.json
samples/rest/uat-approved/: ADDRESS_FIELDS-approved.json
samples/soap/prod-actual/: ADDRESS_FIELDS-actual.xml
samples/soap/uat-approved/: ADDRESS_FIELDS-approved.xml
src/: __init__.py  exceptions.py  models.py  pretty_printer.py  schema_generator.py  xml_parser.py
tests/: __init__.py  test_exceptions.py  test_models.py  test_schema_generator.py  test_setup.py  test_xml_parser.py
